# warpii

./: CMakeLists.txt  CMakePresets.json  Makefile  main.cc  warpii.default.env
.circleci/: config.yml
.github/workflows/: gh-pages.yml  warpii-test.yml
cmake/: warpii-doc.cmake
docs/: CONTRIBUTING.md  architecture.md  autogen_params_style.css  doxyfile.in  doxylayout.in.xml  esdgsem.md  extension_tutorial.md  first_steps.md  five_moment_params.md  getting_started.md  howto.md  install.md  locally_implicit_five_moment_sources.md  mainpage.md  maxwell_params.md  reference.md
docs/input_files/: five_moment_example.inp  phmaxwell_example.inp
docs/scripts/: build_params_doc_pages.sh  process_params_json.py  replace_doxygen_html_contents.py
examples/five-moment/: divergence_cleaning.inp  forward_facing_step.inp  freestream_1d.inp  freestream_2d_diagonal.inp  gem_challenge.py  langmuir_sheath.inp  langmuir_wave.inp  orszag_tang.inp  orszag_tang.py  orszag_tang_2.inp  orszag_tang_scaled.inp  shu_osher_shock_1d.inp  snowplow.inp  sod_shocktube.inp  source_outflow.inp
examples/five-moment/forward_facing_step/: Makefile  main.cc
examples/phmaxwell/: divergence_cleaning.inp  lightprop_periodic_1d.inp
extensions/: CMakeLists.txt  dummy_extension_main.cc
include/: function_eval.h  geometry.h  grid.h  simulation_input.h
include/extensions/: extension.h
include/five_moment/: bc_helper.h  cell_evaluators.h  euler.h  extension.h  species.h  species_func.h
include/maxwell/: extension.h
my_extensions/emissive_sheath_1d/: Makefile  main  main.cc  sheath.inp
my_extensions/single_species_outflow_1d/: Makefile  main.cc  outflow.inp
script/: Makefile  install-boost.sh  install-dealii.sh
src/: CMakeLists.txt  common_params.cc  common_params.h  geometry.cc  geometry.h  normalization.cc  normalization.h  opts.h  rk.h  simulation_input.cc  timestep_request.h  timestep_result.h  timestepper.cc  utilities.cc  utilities.h  warpii.cc  wrapper.h
src/dgsem/: nodal_dg_discretization.cc  nodal_dg_discretization.h  persson_peraire_shock_indicator.h
src/five_moment/: bc_helper.h  cell_evaluators.cc  dg_solution_helper.cc  dg_solution_helper.h  dg_solver.cc  dg_solver.h  explicit_operator.cc  explicit_operator.h  explicit_source_operator.cc  explicit_source_operator.h  five_moment.cc  five_moment.h  fluid_flux_dg_operator.h  fluid_flux_es_dgsem_operator.h  flux_operator.h  implicit_source_operator.cc  implicit_source_operator.h  postprocessor.h  solution_vec.cc  solution_vec.h  source_operator.cc  source_operator.h  species.cc  species_func.cc  species_func.h
src/five_moment/fluxes/: jacobian_utils.h  split_form_volume_flux.h  subcell_finite_volume_flux.h
src/maxwell/: bc_map.h  dg_solver.cc  dg_solver.h  extension.h  fields.cc  fields.h  maxwell.h  maxwell_app.cc  maxwell_app.h  maxwell_flux_dg_operator.h  phmaxwell_func.cc  phmaxwell_func.h  solution_helper.cc  solution_helper.h  solution_vec.cc  solution_vec.h
test/: CMakeLists.txt  bc_extension_test.cc  cell_evaluators_test.cc  conservation_test.cc  current_drive_test.cc  electromagnetic_energy_test.cc  entropy_stability_test.cc  euler_test.cc  five_moment_test_helpers.cc  five_moment_test_helpers.h  input_test.cc  phmaxwell_test.cc  plasma_waves_test.cc  rk_test.cc  shock_capturing_fv_test.cc  snowplow_test.cc  species_func_test.cc  timestepper_test.cc  utilities_test.cc
test/doctests/: extension_tutorial_test.sh
test/scripts/: compile-extension.sh  run-example-as-regression-test.sh
