add_library(libwarpii
    warpii.cc
    common_params.cc
    input_file.cc
    timestepper.cc
    grid.cc
    grid_descriptions.cc
    grid_generation.cc
    dof_utils.cc
    five_moment/dg_solution_helper.cc
    five_moment/dg_solver.cc
    five_moment/five_moment.cc
    five_moment/explicit_operator.cc
    five_moment/implicit_source_operator.cc
    five_moment/solution_vec.cc
    five_moment/species.cc
    five_moment/species_func.cc
    maxwell/maxwell_app.cc
    maxwell/dg_solver.cc
    maxwell/phmaxwell_func.cc
    maxwell/solution_helper.cc
    maxwell/solution_vec.cc
    maxwell/fields.cc
    dgsem/nodal_dg_discretization.cc
    normalization.cc
    fpe.cc
    utilities.cc
    )
deal_ii_setup_target(libwarpii)

